--- a/scrum-poker-server/package.json
+++ b/scrum-poker-server/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.0",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "tslint": "^6.1.3",
     "typescript": "^5.5.4"
   }
